--- a/styles/globals.css
+++ b/styles/globals.css
@@ -6,7 +6,7 @@ img{
     max-height: 100%;
 }
 input,textarea,select {
-  @apply border border-gray-300 rounded-md px-1 w-full;
+  @apply border border-gray-200 rounded-sm px-1 w-full py-2 px-3;
   @apply mb-2;
 }
 
@@ -15,15 +15,15 @@ input:focus, textarea:focus, select:focus{
 }
 
 h1{
-    @apply text-blue-900 mb-2 text-xl;
+    @apply text-gray-800 mb-4 text-xl;
 }
 
 label{
-    @apply text-blue-900
+    @apply text-gray-600 text-sm;
 }
 
 .btn-primary{
-    @apply bg-blue-900 text-white px-4 py-1 rounded-md;
+    @apply bg-primary text-white px-4 py-1 rounded-sm shadow-sm;
 }
 
 table.basic{
